// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Layout /> with added props - min/max width and text align should match snapshot with props 1`] = `
.c0 {
  box-sizing: border-box;
  text-align: center;
  min-width: 500px;
  max-width: 1000px;
  min-height: 600px;
  max-height: 1100px;
}

<div
  className="c0"
/>
`;

exports[`<Layout /> with default props/settings should match snapshot 1`] = `
.c0 {
  box-sizing: border-box;
}

<div
  className="c0"
/>
`;
